# MAA_Resource_Downloader

./: README.md  check_status.py  extract.py  pyproject.toml
.github/: copilot-instructions.md
src/: check_status.py  config.json  extract.py  main.py  notification.py  setup.py
src/maa_resource_downloader/: check_status.py  config.json  extract.py  main.py  notification.py  paths.json  read_path.py  setup.py
