[project]
name = "MAA_Resource_Downloader"
version = "0.1.0"
description = "MAA_Resource_Downloader"
authors = [
    {name = "RiwiHow", email = "53964574+RiwiHow@users.noreply.github.com"},
]
dependencies = [
    "requests>=2.32.3",
    "plyer>=2.1.0",
    "cx-Freeze>=7.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false